# open-esc-firmware

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  crazy.logicdata
lib/support/: ap-lowpass.cpp  ap-lowpass.h  ap-math.h  json-parser.h
src/: debug.h  genlookup.py  main.c  main.cpp  sine-lookup.h
src/example/: detect-direction.c  example-adc.cpp  example-audio.cpp  example-beep.cpp  example-bemf.cpp  example-input-dshot.cpp  example-spwm-complementary.cpp
src/example/audio-beep/: main.cpp
src/example/cm3/: example-blink.cpp
src/example/commutate/: main.cpp
src/example/opamp-internal/: main.cpp
src/example/retired/: example-audio-wav.cpp  example-beep.cpp  example-closed-loop.cpp  example-commutate.cpp  example-detect-input-protocol.cpp  example-dshot-output.cpp  example-input-dshot.cpp
src/example/usart/: main.cpp
src/example/wav/: blue.h  ridin-dirty.h  smoke-weed.h
src/example/zero-cross/: main.cpp
src/hal/inc/: adc.h  bridge.h  comparator.h  global.h  pwm-input.h  spi.h  system.h  usart.h  watchdog.h
src/hal/src/stm32/common/: adc.c  bridge.c  comparator-external.c  comparator-internal.c  comparator.c  global.c  pwm-input.c  spi.c  system.c  usart.c  watchdog.c
src/main/: flash.h  input.h  led.h  main.cpp  registers.h  system.h  uart.h
src/main/inc/: audio.h  bemf.h  commutation.h  console.h  debug-pins.h  io.h  isr.h  led.h  overcurrent-watchdog.h  throttle.h
src/main/src/: audio.cpp  bemf.c  commutation.c  comparator-isr.c  console.c  debug-pins.c  io.cpp  led-gpio.c  overcurrent-watchdog.c  throttle.c
src/main/stm32/f0/: led.c
src/util/: openesc.json
tools/: build-all.sh  generate-nvic-all.sh  install-arm-toolchain.sh  travis-ci-functions.sh  travis-ci-script.sh
